Bevel tool settings fail to apply to next operation, when using the Bevel gizmo #72416

Closed
opened 2019-12-13 11:53:11 +01:00 by William Reynish · 8 comments

System Information
Operating system: Darwin-18.7.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon R9 M395X OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.11.20

Blender Version
Broken: version: 2.82 (sub 5), branch: master, commit date: 2019-12-13 09:27, hash: ec62413f80
Worked: never, I think

Short description of error
When using the Bevel toolbar tool, the top bar tool settings don't properly apply to the next bevel operation

Exact steps for others to reproduce the error

  • Open Blender
  • Make sure you have Fallback Tools enabled in Preferences
  • Enter Edit mode and select something
  • Enable the Bevel
  • Drag in the viewport to Bevel
  • Now change the settings in the top bar (change the Segments, or the Profile, or anything)
  • Drag again in the viewport to Bevel
  • The settings didn't apply and are ignored.

Bevel_tool_settings_bug.mov

**System Information** Operating system: Darwin-18.7.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon R9 M395X OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.11.20 **Blender Version** Broken: version: 2.82 (sub 5), branch: master, commit date: 2019-12-13 09:27, hash: `ec62413f80` Worked: never, I think **Short description of error** When using the Bevel toolbar tool, the top bar tool settings don't properly apply to the next bevel operation **Exact steps for others to reproduce the error** - Open Blender - Make sure you have Fallback Tools enabled in Preferences - Enter Edit mode and select something - Enable the Bevel - Drag in the viewport to Bevel - Now change the settings in the top bar (change the Segments, or the Profile, or anything) - Drag again in the viewport to Bevel - The settings didn't apply and are ignored. [Bevel_tool_settings_bug.mov](https://archive.blender.org/developer/F8219433/Bevel_tool_settings_bug.mov)

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish
Campbell Barton was assigned by William Reynish 2019-12-13 11:53:36 +01:00
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

I can't reproduce this on c8d121bf35 : /

I'll make a new build to check with more recent commits from master, but I don't have time today.

I can't reproduce this on c8d121bf35 : / I'll make a new build to check with more recent commits from master, but I don't have time today.

Added subscriber: @ThatAsherGuy

Added subscriber: @ThatAsherGuy

Do you have fallback tools enabled? If you do, test it with the fallback set to the active tool versus one of the selection tools.

Edit: Double-checked on {38ad1c4d339d}, this is the same issue with the fallback tool system I pointed out last week.

Do you have fallback tools enabled? If you do, test it with the fallback set to the active tool versus one of the selection tools. Edit: Double-checked on {38ad1c4d339d}, this is the same issue with the fallback tool system I pointed out last week.

@ThatAsherGuy

Yes, indeed this seems to apply when using the Bevel gizmo

@ThatAsherGuy Yes, indeed this seems to apply when using the Bevel gizmo
William Reynish changed title from Bevel tool settings fail to apply to next operation to Bevel tool settings fail to apply to next operation, when using the Bevel gizmo 2019-12-14 14:27:28 +01:00

This issue was referenced by aa1af7f8e4

This issue was referenced by aa1af7f8e40e9f67f40bb4bf96756b83d2b0189a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72416
No description provided.