Fix T72416: Tool settings ignored when activated from gizmo